// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalHeader Snapshots matches snapshot in RTL mode 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
  testID="global-header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
    testID="global-header-top"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
      testID="global-header-left"
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontFamily": "Ubuntu-Medium",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          {
            "textAlign": "right",
          },
        ]
      }
      testID="global-header-title"
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row-reverse",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
      testID="global-header-actions"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="global-header-bottom"
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with all buttons 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
  testID="global-header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
    testID="global-header-top"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
      testID="global-header-left"
    >
      <View
        accessibilityLabel="Go back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
        testID="global-header-back-button"
      >
        <Text
          testID="icon-chevron.left"
        >
          chevron.left
        </Text>
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontFamily": "Ubuntu-Medium",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
      testID="global-header-title"
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
      testID="global-header-actions"
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
        testID="global-header-close-button"
      >
        <Text
          testID="icon-xmark"
        >
          xmark
        </Text>
      </View>
      <View
        accessibilityLabel="Menu"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
        testID="global-header-menu-button"
      >
        <Text
          testID="icon-line.3.horizontal"
        >
          line.3.horizontal
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="global-header-bottom"
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
  testID="global-header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
    testID="global-header-top"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
      testID="global-header-left"
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontFamily": "Ubuntu-Medium",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
      testID="global-header-title"
    >
      Header Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
      testID="global-header-actions"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="global-header-bottom"
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with hideBottomSection 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
  testID="global-header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
    testID="global-header-top"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
      testID="global-header-left"
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontFamily": "Ubuntu-Medium",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
      testID="global-header-title"
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
      testID="global-header-actions"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with rightAction 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
  testID="global-header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
    testID="global-header-top"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
      testID="global-header-left"
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontFamily": "Ubuntu-Medium",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
      testID="global-header-title"
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
      testID="global-header-actions"
    >
      <Text>
        Action
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="global-header-bottom"
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;
